<resources>
    <string name="app_name">44FlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang_di_home_fragment">Selamat datang di Home Fragment</string>
    <string name="ke_halaman_category">Ke Halaman Category</string>
    <string name="selamat_datang_di_halaman_category">Selamat Datang di Halaman Category</string>
    <string name="kategori_lifestyle">Kategori Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="ke_halaman_activity">Ke Halaman Activity</string>
    <string name="tampilkan_sebuah_dialog">Tampilkan Sebuah Dialog</string>
    <string name="siapa_nama_presiden_indonesia_tahun_2020">Siapa nama presiden indonesia tahun 2020?</string>
    <string name="soekarno">Soekarno</string>
    <string name="joko_widodo">Joko Widodo</string>
    <string name="susilo_bambang_yudhoyono">Susilo Bambang Yudhoyono</string>
    <string name="evania_intiha">Evania Intiha</string>
    <string name="tutup">Tutup</string>
    <string name="pilih">Pilih</string>
</resources>